<?xml version="1.0"?>
<package format="2">
  <name>expl_planner</name>
  <version>0.0.0</version>
  <description>The expl_planner package</description>

  <maintainer email="luigifreda@gmail.com">Luigi Freda</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>path_planner</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>trajectory_control_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>  
  <build_depend>pcl_conversions</build_depend>  
  <build_depend>geometry_msgs</build_depend>    
  <build_depend>visualization_msgs</build_depend>  
  <build_depend>interactive_markers</build_depend>  
  <build_depend>octomap_world_expl</build_depend>    
  <build_depend>kdtree</build_depend>
  <build_depend>multiagent_collision_check</build_depend>
  <build_depend>exploration_msgs</build_depend>    

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>  
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>  
  <build_export_depend>path_planner</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>trajectory_control_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>  
  <build_export_depend>visualization_msgs</build_export_depend>  
  <build_export_depend>interactive_markers</build_export_depend>   
  <build_export_depend>octomap_world_expl</build_export_depend>  
  <build_export_depend>kdtree</build_export_depend>  
  <build_export_depend>multiagent_collision_check</build_export_depend>  
  <build_export_depend>exploration_msgs</build_export_depend>    
  
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>    
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>path_planner</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>trajectory_control_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>  
  <exec_depend>visualization_msgs</exec_depend>    
  <exec_depend>interactive_markers</exec_depend>   
  <exec_depend>octomap_world_expl</exec_depend>   
  <exec_depend>kdtree</exec_depend>   
  <exec_depend>multiagent_collision_check</exec_depend> 
  <exec_depend>exploration_msgs</exec_depend>            

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>
</package>
