<?xml version="1.0"?>
<package>
  <name>nbvplanner</name>
  <version>0.0.0</version>
  <description>The nbvplanner package</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">Andreas Bircher</maintainer>

  <license>ASL 2.0</license>

  <author>Andreas Bircher</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>octomap_world_expl</build_depend>
  <build_depend>kdtree</build_depend>
  <build_depend>multiagent_collision_check</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>octomap_world_expl</run_depend>
  <run_depend>kdtree</run_depend>
  <run_depend>multiagent_collision_check</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib"/>
  </export>
  
</package>
