<?xml version="1.0"?>
<package>
  <name>jackal_3dexplorer</name>
  <version>0.1.0</version>
  <description>Launch files for autonomous 3D exploration with jackal robots</description>
  <author email="luigifreda@gmail.com">Luigi Freda</author>
  <maintainer email="luigifreda@gmail.com">Luigi Freda</maintainer>  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <export>
  </export>
</package>
