<?xml version="1.0"?>
<package format="2">
  <name>doxygen_catkin</name>
  <version>0.0.1</version>
  <description>doxygen_catkin</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

