<package format="2">
  <name>glog_catkin</name>
  <version>0.0.0</version>
  <description>glog_catkin</description>
  <maintainer email="slynen@ethz.ch">Simon Lynen</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>gflags_catkin</depend>
</package>
