<package>
  <name>mav_comm</name>
  <version>3.3.2</version>
  <description>Contains messages and services for MAV communication</description>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <author>Simon Lynen</author>
  <author>Markus Achtelik</author>
  <author>Pascal Gohl</author>
  <author>Sammy Omari</author>
  <author>Michael Burri</author>
  <author>Fadri Furrer</author>
  <author>Helen Oleynikova</author>
  <author>Mina Kamel</author>
  <author>Karen Bodie</author>
  <author>Rik Bähnemann</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/mav_comm</url>
  <url type="bugtracker">https://github.com/ethz-asl/mav_comm/issues</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>mav_msgs</run_depend>
  <run_depend>mav_planning_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
