<?xml version="1.0"?>
<package format="2">
  <name>mav_planning_msgs</name>
  <version>3.3.2</version>
  <description>
    Messages specific to MAV planning, especially polynomial planning.
  </description>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>

  <author>Simon Lynen</author>
  <author>Markus Achtelik</author>
  <author>Pascal Gohl</author>
  <author>Sammy Omari</author>
  <author>Michael Burri</author>
  <author>Fadri Furrer</author>
  <author>Helen Oleynikova</author>
  <author>Karen Bodie</author>
  <author>Rik Bähnemann</author>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/mav_comm</url>
  <url type="bugtracker">https://github.com/ethz-asl/mav_comm/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>mav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
