<?xml version="1.0"?>
<package format="2">
  <name>ouster_gazebo_plugins</name>
  <version>2.0.2</version>
  <description>
    Gazebo plugin to provide simulated data from Ouster laser scanners.
  </description>

  <license>BSD</license>
  <author>Kevin Hallenbeck</author>
  <author email="tlasguigne@laas.fr">Thibaud Lasguignes</author>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <url type="repository">https://gepgitlab.laas.fr/gepetto/ouster-gazebo-simulation</url>
  <url type="bugtracker">https://gepgitlab.laas.fr/gepetto/ouster-gazebo-simulation/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>

  <export>
  </export>

</package>
