<?xml version="1.0"?>
<package format="2">
  <name>elevation_mapping_ugvs</name>
  <version>0.0.1</version>
  <description>Demonstrations for the elevation mapping framework with ugvs.</description>
  <maintainer email="luigifreda@gmail.com">Luigi Freda</maintainer>
  <license>BSD</license>

  <author email="luigifreda@gmail.com">Luigi Freda</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>elevation_mapping</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>rviz</depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>point_cloud_io</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>xacro</exec_depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
