<?xml version="1.0"?>
<package format="2">
  <name>message_logger</name>
  <version>0.2.10</version>
  <description>The message logger package</description>
  <maintainer email="pleemann@anybotics.com">Philipp Leemann</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>
  <license>BSD</license>
  <author email="cgehring@anybotics.com">Christian Gehring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <test_depend>gtest</test_depend>
<!--   <test_depend>cmake_code_coverage</test_depend> -->
</package>
